tests/NormalTests/paczka1/small_fuzzy/71283050.err
Error in line 3: gDTWUpLybIw S43 50,24
Error in line 7: EL9Vj S43 3,4
Error in line 10: nrkZ A781 32,3
